# chisel

./: .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
chisel_cli/: CMakeLists.txt  chisel.rc
chisel_cli/cli/: cli_parser.cpp
chisel_cli/report/: report_generator.cpp  report_generator.hpp
chisel_cli/src/: main.cpp
chisel_cli/src/cli/: cli_parser.cpp  cli_parser.hpp
chisel_cli/src/report/: report_generator.cpp
chisel_cli/src/utils/: color.hpp  console_log_sink.hpp  file_log_sink.hpp  file_scanner.cpp  file_scanner.hpp
chisel_cli/utils/: file_scanner.cpp  file_scanner.hpp
cmake/: EBMLConfig.cmake  EBMLConfigVersion.cmake
libchisel/: CMakeLists.txt
libchisel/include/: aiff_processor.hpp  ape_processor.hpp  archive_processor.hpp  audio_metadata_util.hpp  bmp_processor.hpp  chisel.hpp  event_bus.hpp  events.hpp  file_type.hpp  file_utils.hpp  flac_processor.hpp  flexigif_processor.hpp  gif_processor.hpp  jpeg_processor.hpp  jxl_processor.hpp  log_sink.hpp  logger.hpp  magic_mgc.h  mime_detector.hpp  mkv_processor.hpp  mp4_processor.hpp  mpeg_processor.hpp  mseed_processor.hpp  odf_processor.hpp  ogg_processor.hpp  ooxml_processor.hpp  pdf_processor.hpp  png_processor.hpp  pnm_processor.hpp  processor.hpp  processor_executor.hpp  processor_registry.hpp  random_utils.hpp  sqlite_processor.hpp  tga_processor.hpp  thread_pool.hpp  tiff_processor.hpp  wav_processor.hpp  wavpack_processor.hpp  webp_processor.hpp  (+1 more)
libchisel/rust_bridge/: Cargo.toml
libchisel/rust_bridge/src/: lib.rs
libchisel/src/processors/: aiff_processor.cpp  ape_processor.cpp  archive_processor.cpp  bmp_processor.cpp  flac_processor.cpp  flexigif_processor.cpp  gif_processor.cpp  jpeg_processor.cpp  jxl_processor.cpp  mkv_processor.cpp  mp4_processor.cpp  mpeg_processor.cpp  mseed_processor.cpp  odf_processor.cpp  ogg_processor.cpp  ooxml_processor.cpp  pdf_processor.cpp  png_processor.cpp  pnm_processor.cpp  sqlite_processor.cpp  tga_processor.cpp  tiff_processor.cpp  wav_processor.cpp  wavpack_processor.cpp  webp_processor.cpp  zopflipng_processor.cpp
libchisel/src/utils/: audio_metadata_util.cpp  chisel.cpp  file_utils.cpp  logger.cpp  mime_detector.cpp  processor_executor.cpp  processor_registry.cpp  random_utils.cpp  thread_pool.cpp
src/: main.cpp
src/cli/: cli_parser.cpp  cli_parser.hpp
src/containers/: archive_handler.cpp  archive_handler.hpp  container.hpp  docx_handler.cpp  docx_handler.hpp  mkv_handler.cpp  mkv_handler.hpp  odf_handler.cpp  odf_handler.hpp  ooxml_handler.cpp  ooxml_handler.hpp  pdf_handler.cpp  pdf_handler.hpp  pptx_handler.cpp  pptx_handler.hpp  xlsx_handler.cpp  xlsx_handler.hpp
src/encoder/: alac_encoder.cpp  alac_encoder.hpp  ape_encoder.cpp  ape_encoder.hpp  encoder.hpp  flac_encoder.cpp  flac_encoder.hpp  flexigif_encoder.cpp  flexigif_encoder.hpp  gif_encoder.cpp  gif_encoder.hpp  jpeg_encoder.cpp  jpeg_encoder.hpp  jxl_encoder.cpp  jxl_encoder.hpp  mkv_encoder.cpp  mkv_encoder.hpp  mseed_encoder.cpp  mseed_encoder.hpp  pdf_encoder.cpp  pdf_encoder.hpp  png_encoder.cpp  png_encoder.hpp  sqlite_encoder.cpp  sqlite_encoder.hpp  tiff_encoder.cpp  tiff_encoder.hpp  wav_encoder.cpp  wav_encoder.hpp  wavpack_encoder.cpp  wavpack_encoder.hpp  webp_encoder.cpp  webp_encoder.hpp  zopflipng_encoder.cpp  zopflipng_encoder.hpp
src/processors/: ape_processor.cpp  ape_processor.hpp  archive_processor.cpp  archive_processor.hpp  flac_processor.cpp  flac_processor.hpp  flexigif_processor.cpp  flexigif_processor.hpp  gif_processor.cpp  gif_processor.hpp  jpeg_processor.cpp  jpeg_processor.hpp  jxl_processor.cpp  jxl_processor.hpp  mkv_processor.cpp  mkv_processor.hpp  mseed_processor.cpp  mseed_processor.hpp  odf_processor.cpp  odf_processor.hpp  ooxml_processor.cpp  ooxml_processor.hpp  pdf_processor.cpp  pdf_processor.hpp  png_processor.cpp  png_processor.hpp  processor.hpp  sqlite_processor.cpp  sqlite_processor.hpp  tiff_processor.cpp  tiff_processor.hpp  wavpack_processor.cpp  wavpack_processor.hpp  webp_processor.cpp  webp_processor.hpp  zopflipng_processor.cpp  zopflipng_processor.hpp
src/report/: report_generator.cpp  report_generator.hpp
src/utils/: archive_formats.hpp  console_log_sink.hpp  encoder_registry.cpp  encoder_registry.hpp  event_bus.hpp  events.hpp  file_log_sink.hpp  file_scanner.cpp  file_scanner.hpp  file_type.cpp  file_type.hpp  log_sink.hpp  logger.cpp  logger.hpp  logger_2.cpp  logger_2.hpp  mime_detector.cpp  mime_detector.hpp  processor_executor.cpp  processor_executor.hpp  processor_registry.cpp  processor_registry.hpp  random_utils.cpp  random_utils.hpp  thread_pool.cpp  thread_pool.hpp
